Cambio de la ruta de imagenes

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 
    <header class="header">
       <div>
-          <a href="https://www.npmjs.com/"><img src="/images/npm-logo.png" alt="logo"  width="127px" class="logo"></a>
+          <a href="https://www.npmjs.com/"><img src="./images/npm-logo.png" alt="logo"  width="127px" class="logo"></a>
           <form>
             <input type="text" placeholder="find packages">
           </form>
           <p class="log-in"><a href="https://www.npmjs.com/signup" class="link">Sign up</a> or <a href="https://www.npmjs.com/login" class="link">log in</a></p>
-          <a href="https://www.npmjs.com/login"><img src="/images/bear-logo.png" alt="logo"  width="2%" class="second-logo"></a>
+          <a href="https://www.npmjs.com/login"><img src="./images/bear-logo.png" alt="logo"  width="2%" class="second-logo"></a>
 
 
 
@@ -51,7 +51,7 @@
    
    <section id="how" class="collaboration">
      <div class="primer-div">
-      <img src="/images/collaboration.svg" alt="how we do it"  width="50%">
+      <img src="./images/collaboration.svg" alt="how we do it"  width="50%">
 
       <div class="collaboration-text">
       <h1>npm Orgs is powerful<br> collaboration — for free</h1>
@@ -88,7 +88,7 @@
     </div>
     <div class="examples-align">
       <div class="col col-3">
-        <img src="/images/binoculars.svg" alt="Find">
+        <img src="./images/binoculars.svg" alt="Find">
 
         <h2>Find</h2>
         <p>Libraries like <a href="https://www.npmjs.com/package/jquery" class="link">JQuery</a>, <a href="https://www.npmjs.com/package/bootstrap" class="link">Bootstrap</a>,<br> <a href="https://www.npmjs.com/package/react" class="link">React</a>, and<a href="https://www.npmjs.com/package/angular" class="link">Angular</a>, and<br> components from frameworks<br> such as <a href="https://www.npmjs.com/package/ember-source" class="link">Ember</a>.</p>
@@ -96,7 +96,7 @@
       </div>
 
       <div class="col col-3">
-        <img src="/images/mountain-flag.svg" alt="Discover">
+        <img src="./images/mountain-flag.svg" alt="Discover">
 
         <h2>Discover</h2>
         <p>Packages for mobile, IoT, front<br> end, back end, robotics…<br> everything you need to start<br> building amazing things.</p>
@@ -104,7 +104,7 @@
       </div>
 
       <div class="col col-3">
-        <img src="/images/backpack.svg" alt="Build">
+        <img src="./images/backpack.svg" alt="Build">
 
         <h2>Build</h2>
         <p>Assemble packages like building<br> blocks to quickly develop<br> awesome new projects.</p>
