Cambio en el margin del body

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" type="text/css" href="styles.css">
 
 </head>
-<body>
-    <nav>
+<body class="body">
+  <nav>
         <div class="top-left">
           <a class = "heart" href="https://www.npmjs.com/my-first-publish">❤</a>
           <span class="acronym">Neophobe Plebeian Mumpsimus</span>
@@ -21,8 +21,8 @@
           <li><a href="https://docs.npmjs.com/">documentation</a></li>
           <li><a href="https://www.npmjs.com/support">support</a></li>
         </ul>
-      </nav>
-      <div class="clearfix"></div>
+  </nav>
+  <div class="clearfix"></div>
 
    <header class="header">
       <div>
